# A-Share-Intelligent-Investment-Advisory-Project-Based-on-LLM

./: .gitattributes  .gitignore  20260628流式精筛冷启动开发计划.md  20260722问题检测.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  pyproject.toml  和fin-agent对比分析.md  审计报告.md  对比分析测试及报告撰写实施计划.md  智能投顾功能设计文档.md  评分智能体开发总纲.md  评测agent待改进问题汇总.md  问答功能优化指南.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Finance/: requirements.txt
Finance/Financial-MCP-Agent/: .env.example  __init__.py  launch.bat  launch.ps1  run.bat  run.ps1  run.sh  setup.bat  test_extraction.py
Finance/Financial-MCP-Agent/.streamlit/: config.toml
Finance/Financial-MCP-Agent/scripts/: backfill_signal_pack_category.py  offline_score_comparison.py
Finance/Financial-MCP-Agent/src/: BLUEPRINT.md  fund_main.py  main.py  main_pool.py
Finance/Financial-MCP-Agent/tests/: test_20260722_issue_fixes.py  test_advisory_session.py  test_analysis_package.py  test_anti_hallucination.py  test_backtest.py  test_batch_frontend.py  test_batch_scorer.py  test_category_schema.py  test_conflict_arbitration.py  test_contribution.py  test_decision_pack.py  test_deterministic_scorer.py  test_eval_cache.py  test_eval_cli.py  test_eval_schemas.py  test_eval_storage.py  test_experiment_engine.py  test_job_manager.py  test_label_builder.py  test_line_pool.py  test_loss_engine.py  test_manual_package_builder.py  test_market_simulator.py  test_multi_source.py  test_optimizer.py  test_orchestrator.py  test_pit_boundary.py  test_pool_screening.py  test_pool_screening_contract.py  test_pool_screening_integration.py  test_pool_screening_reliability.py  test_pool_update_worker.py  test_qa.py  test_refined_pool_repository.py  test_replay_pit_contract.py  test_report.py  test_risk_gate.py  test_score_assessment.py  test_score_failure_boundaries.py  (+7 more)
Finance/a-share-mcp-is-just-i-need/: mcp_server.py  test_composite.py  tushare_mcp_server.py
Finance/a-share-mcp-server/: mcp_server.py  tushare_mcp_server.py  web_search_mcp_server.py  yfinance_mcp_server.py
已经完成的过程性文件/: 基金分析功能agent设计总览图.md  子agent架构改进方案.md  问答功能开发指南.md
(+247 files in other folders)
